--- a/Notebooks/AutoML Generalized Framework.ipynb
+++ b/Notebooks/AutoML Generalized Framework.ipynb
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['target', 'data', 'feature_names', 'DESCR', 'filename', 'target_names'])"
+       "dict_keys(['feature_names', 'DESCR', 'data', 'target', 'target_names', 'filename'])"
       ]
      },
      "execution_count": 4,
@@ -229,20 +229,13 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 1 - Current best internal CV score: 0.9824358974358974\n",
-      "Generation 2 - Current best internal CV score: 0.9824358974358974\n",
+      "Generation 1 - Current best internal CV score: 0.9673717948717948\n",
+      "Generation 2 - Current best internal CV score: 0.9723717948717949\n",
       "\n",
-      "Best pipeline: LogisticRegression(StandardScaler(input_matrix), C=0.5, dual=False, penalty=l2)\n"
+      "Best pipeline: GradientBoostingClassifier(input_matrix, learning_rate=0.5, max_depth=6, max_features=0.8500000000000001, min_samples_leaf=11, min_samples_split=14, n_estimators=100, subsample=0.6000000000000001)\n"
      ]
     }
    ],
@@ -263,10 +256,10 @@
       "text/plain": [
        "{'crossover_count': 0,\n",
        " 'generation': 'INVALID',\n",
-       " 'internal_cv_score': 0.9621794871794872,\n",
+       " 'internal_cv_score': 0.9397435897435897,\n",
        " 'mutation_count': 2,\n",
-       " 'operator_count': 3,\n",
-       " 'predecessor': ('GradientBoostingClassifier(PCA(input_matrix, PCA__iterated_power=7, PCA__svd_solver=randomized), GradientBoostingClassifier__learning_rate=0.5, GradientBoostingClassifier__max_depth=10, GradientBoostingClassifier__max_features=0.7000000000000001, GradientBoostingClassifier__min_samples_leaf=17, GradientBoostingClassifier__min_samples_split=16, GradientBoostingClassifier__n_estimators=100, GradientBoostingClassifier__subsample=1.0)',)}"
+       " 'operator_count': 2,\n",
+       " 'predecessor': ('ExtraTreesClassifier(input_matrix, ExtraTreesClassifier__bootstrap=True, ExtraTreesClassifier__criterion=entropy, ExtraTreesClassifier__max_features=0.7500000000000001, ExtraTreesClassifier__min_samples_leaf=8, ExtraTreesClassifier__min_samples_split=3, ExtraTreesClassifier__n_estimators=100)',)}"
       ]
      },
      "execution_count": 11,
@@ -300,23 +293,16 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 1 - Current best internal CV score: -13.711071255959364\n",
-      "Generation 2 - Current best internal CV score: -13.711071255959364\n",
-      "Generation 3 - Current best internal CV score: -12.58781032828262\n",
-      "Generation 4 - Current best internal CV score: -12.58781032828262\n",
-      "Generation 5 - Current best internal CV score: -12.521261971500593\n",
+      "Generation 1 - Current best internal CV score: -15.445139196926988\n",
+      "Generation 2 - Current best internal CV score: -13.871244694915386\n",
+      "Generation 3 - Current best internal CV score: -13.871244694915386\n",
+      "Generation 4 - Current best internal CV score: -13.518966973980335\n",
+      "Generation 5 - Current best internal CV score: -13.088285629211185\n",
       "\n",
-      "Best pipeline: XGBRegressor(input_matrix, learning_rate=0.1, max_depth=4, min_child_weight=11, n_estimators=100, nthread=1, objective=reg:squarederror, subsample=0.8)\n"
+      "Best pipeline: AdaBoostRegressor(AdaBoostRegressor(ZeroCount(input_matrix), learning_rate=0.5, loss=linear, n_estimators=100), learning_rate=0.5, loss=linear, n_estimators=100)\n"
      ]
     }
    ],
@@ -336,9 +322,9 @@
      "data": {
       "text/plain": [
        "defaultdict(None,\n",
-       "            {'mean_absolute_error': 1.9177747569586103,\n",
-       "             'mean_squared_error': 9.97697244687473,\n",
-       "             'r2_score': 0.880016010057068})"
+       "            {'mean_absolute_error': 2.2718073638268916,\n",
+       "             'mean_squared_error': 10.45529163096584,\n",
+       "             'r2_score': 0.788553478479608})"
       ]
      },
      "execution_count": 14,
@@ -349,6 +335,15 @@
    "source": [
     "auto_ml_model.evaluate_model()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
