Added data preparation notebook

--- a/Notebooks/AutoML Generalized Framework.ipynb
+++ b/Notebooks/AutoML Generalized Framework.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -296,18 +296,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 1 - Current best internal CV score: -15.445139196926988\n",
-      "Generation 2 - Current best internal CV score: -13.871244694915386\n",
-      "Generation 3 - Current best internal CV score: -13.871244694915386\n",
-      "Generation 4 - Current best internal CV score: -13.518966973980335\n",
-      "Generation 5 - Current best internal CV score: -13.088285629211185\n",
+      "Generation 1 - Current best internal CV score: -11.971159874228352\n",
+      "Generation 2 - Current best internal CV score: -10.439694013822542\n",
+      "Generation 3 - Current best internal CV score: -10.439694013822542\n",
+      "Generation 4 - Current best internal CV score: -10.439694013822542\n",
+      "Generation 5 - Current best internal CV score: -10.439694013822542\n",
+      "Generation 6 - Current best internal CV score: -9.93026450773196\n",
+      "Generation 7 - Current best internal CV score: -9.93026450773196\n",
+      "Generation 8 - Current best internal CV score: -9.599069776711993\n",
+      "Generation 9 - Current best internal CV score: -9.599069776711993\n",
+      "Generation 10 - Current best internal CV score: -9.334127755559832\n",
       "\n",
-      "Best pipeline: AdaBoostRegressor(AdaBoostRegressor(ZeroCount(input_matrix), learning_rate=0.5, loss=linear, n_estimators=100), learning_rate=0.5, loss=linear, n_estimators=100)\n"
+      "Best pipeline: XGBRegressor(AdaBoostRegressor(Normalizer(input_matrix, norm=max), learning_rate=1.0, loss=exponential, n_estimators=100), learning_rate=0.1, max_depth=6, min_child_weight=16, n_estimators=100, nthread=1, objective=reg:squarederror, subsample=1.0)\n"
      ]
     }
    ],
    "source": [
-    "auto_ml_model = AutoMLEstimator(task='regression', speed=5, test_size=0.3)\n",
+    "auto_ml_model = AutoMLEstimator(task='regression', speed=10, test_size=0.3)\n",
     "auto_ml_model.run_automl(df, target_column='target')"
    ]
   },
