--- a/Notebooks/AutoML Generalized Framework.ipynb
+++ b/Notebooks/AutoML Generalized Framework.ipynb
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['feature_names', 'DESCR', 'data', 'target', 'target_names', 'filename'])"
+       "dict_keys(['data', 'target_names', 'target', 'feature_names', 'filename', 'DESCR'])"
       ]
      },
      "execution_count": 4,
@@ -229,18 +229,33 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 1 - Current best internal CV score: 0.9673717948717948\n",
-      "Generation 2 - Current best internal CV score: 0.9723717948717949\n",
+      "Generation 1 - Current best internal CV score: 0.9757992249296598\n",
+      "Generation 2 - Current best internal CV score: 0.9757992249296598\n",
+      "Generation 3 - Current best internal CV score: 0.9757992249296598\n",
+      "Generation 4 - Current best internal CV score: 0.9757992249296598\n",
+      "Generation 5 - Current best internal CV score: 0.9758719541328237\n",
+      "Generation 6 - Current best internal CV score: 0.9758719541328237\n",
+      "Generation 7 - Current best internal CV score: 0.9780453363062058\n",
+      "Generation 8 - Current best internal CV score: 0.9780453363062058\n",
+      "Generation 9 - Current best internal CV score: 0.9780453363062058\n",
+      "Generation 10 - Current best internal CV score: 0.9780453363062058\n",
       "\n",
-      "Best pipeline: GradientBoostingClassifier(input_matrix, learning_rate=0.5, max_depth=6, max_features=0.8500000000000001, min_samples_leaf=11, min_samples_split=14, n_estimators=100, subsample=0.6000000000000001)\n"
+      "Best pipeline: GradientBoostingClassifier(PolynomialFeatures(input_matrix, degree=2, include_bias=False, interaction_only=False), learning_rate=0.1, max_depth=5, max_features=0.15000000000000002, min_samples_leaf=10, min_samples_split=14, n_estimators=100, subsample=0.2)\n"
      ]
     }
    ],
    "source": [
-    "auto_ml_model = AutoMLEstimator(task='classification', speed=2, test_size=0.3)\n",
+    "auto_ml_model = AutoMLEstimator(task='classification', speed=10, test_size=0.2)\n",
     "auto_ml_model.run_automl(df, target_column='target')"
    ]
   },
@@ -254,12 +269,12 @@
     {
      "data": {
       "text/plain": [
-       "{'crossover_count': 0,\n",
+       "{'crossover_count': 2,\n",
        " 'generation': 'INVALID',\n",
-       " 'internal_cv_score': 0.9397435897435897,\n",
-       " 'mutation_count': 2,\n",
+       " 'internal_cv_score': 0.9320592451027234,\n",
+       " 'mutation_count': 5,\n",
        " 'operator_count': 2,\n",
-       " 'predecessor': ('ExtraTreesClassifier(input_matrix, ExtraTreesClassifier__bootstrap=True, ExtraTreesClassifier__criterion=entropy, ExtraTreesClassifier__max_features=0.7500000000000001, ExtraTreesClassifier__min_samples_leaf=8, ExtraTreesClassifier__min_samples_split=3, ExtraTreesClassifier__n_estimators=100)',)}"
+       " 'predecessor': ('GradientBoostingClassifier(input_matrix, GradientBoostingClassifier__learning_rate=0.1, GradientBoostingClassifier__max_depth=7, GradientBoostingClassifier__max_features=0.55, GradientBoostingClassifier__min_samples_leaf=14, GradientBoostingClassifier__min_samples_split=10, GradientBoostingClassifier__n_estimators=100, GradientBoostingClassifier__subsample=0.25)',)}"
       ]
      },
      "execution_count": 11,
@@ -287,27 +302,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 1 - Current best internal CV score: -11.971159874228352\n",
-      "Generation 2 - Current best internal CV score: -10.439694013822542\n",
-      "Generation 3 - Current best internal CV score: -10.439694013822542\n",
-      "Generation 4 - Current best internal CV score: -10.439694013822542\n",
-      "Generation 5 - Current best internal CV score: -10.439694013822542\n",
-      "Generation 6 - Current best internal CV score: -9.93026450773196\n",
-      "Generation 7 - Current best internal CV score: -9.93026450773196\n",
-      "Generation 8 - Current best internal CV score: -9.599069776711993\n",
-      "Generation 9 - Current best internal CV score: -9.599069776711993\n",
-      "Generation 10 - Current best internal CV score: -9.334127755559832\n",
+      "Generation 1 - Current best internal CV score: -12.67954508477961\n",
+      "Generation 2 - Current best internal CV score: -11.848068774735953\n",
+      "Generation 3 - Current best internal CV score: -11.848068774735953\n",
+      "Generation 4 - Current best internal CV score: -11.848068774735953\n",
+      "Generation 5 - Current best internal CV score: -11.848068774735953\n",
       "\n",
-      "Best pipeline: XGBRegressor(AdaBoostRegressor(Normalizer(input_matrix, norm=max), learning_rate=1.0, loss=exponential, n_estimators=100), learning_rate=0.1, max_depth=6, min_child_weight=16, n_estimators=100, nthread=1, objective=reg:squarederror, subsample=1.0)\n"
+      "\n",
+      "TPOT closed during evaluation in one generation.\n",
+      "WARNING: TPOT may not provide a good pipeline if TPOT is stopped/interrupted in a early generation.\n",
+      "\n",
+      "\n",
+      "TPOT closed prematurely. Will use the current best pipeline.\n",
+      "\n",
+      "Best pipeline: GradientBoostingRegressor(input_matrix, alpha=0.95, learning_rate=0.1, loss=huber, max_depth=4, max_features=0.7500000000000001, min_samples_leaf=2, min_samples_split=7, n_estimators=100, subsample=0.8)\n"
      ]
     }
    ],
@@ -327,9 +351,9 @@
      "data": {
       "text/plain": [
        "defaultdict(None,\n",
-       "            {'mean_absolute_error': 2.2718073638268916,\n",
-       "             'mean_squared_error': 10.45529163096584,\n",
-       "             'r2_score': 0.788553478479608})"
+       "            {'mean_absolute_error': 2.0780182432962433,\n",
+       "             'mean_squared_error': 7.262445839297437,\n",
+       "             'r2_score': 0.9106636135331789})"
       ]
      },
      "execution_count": 14,
@@ -339,6 +363,28 @@
    ],
    "source": [
     "auto_ml_model.evaluate_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GradientBoostingRegressor'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(auto_ml_model.tpot_model.fitted_pipeline_[0]).__name__"
    ]
   },
   {
@@ -369,6 +415,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.6"
+  },
+  "widgets": {
+   "state": {
+    "4140c87964644e4c874a731a30aaaa0e": {
+     "views": [
+      {
+       "cell_index": 13
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
