Added env file and got web app fully working

--- a/Notebooks/AutoML Generalized Framework.ipynb
+++ b/Notebooks/AutoML Generalized Framework.ipynb
@@ -428,6 +428,7 @@
     "    feature_names = list(X.columns)\n",
     "    feat_importances = dict(zip(feature_names, importances))\n",
     "    feat_importances = OrderedDict(sorted(feat_importances.items(), key=operator.itemgetter(1)))\n",
+    "    plt.figure(figsize=(5, 10))\n",
     "    plt.xticks(range(len(feat_importances)), list(feat_importances.keys()))\n",
     "    plt.bar(range(len(feat_importances)), list(feat_importances.values()), align='center')\n",
     "    plt.savefig(img, format='png')\n",
